--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,10 @@ h4, p{
 
 /* Work Experience */
 
+#work-experiences{
+    margin-bottom: 5em;
+}
+
 #arrow-container{
     height: 0;
     width: 0;
@@ -456,6 +460,44 @@ h4, p{
     opacity: 100;
 }
 
-
-
 /* Footer */
+
+footer {
+    /*position: fixed;*/
+    /*bottom: 0;*/
+    width: 100%;
+    background-color: #353535;
+    color: white;
+}
+
+footer img{
+    width: 3em;
+    margin-right: 1em;
+}
+
+footer li{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+footer ul{
+    flex-grow: 1;
+    margin: 0;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.5s;
+}
+
+footer p{
+    font-size: 1.3em;
+    padding: 0;
+    margin:0;
+}
+
+footer ul:hover{
+    background-color: gray;
+}
