--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-/*body {*/
-/*    padding: 50px;*/
-/*}*/
+body {
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    margin: 0;
+}
 
 h1, h2, h3{
     font-family: 'kulim_parkbold';
@@ -80,7 +81,7 @@ h4, p{
 
 .section-title {
     padding-top: 40px;
-    padding-bottom: 1em;
+    padding-bottom: 0.5em;
     font-size: 70px;
     margin: 0;
 }
@@ -96,19 +97,20 @@ h4, p{
     flex-wrap: wrap;
     margin-left: 3em;
     margin-right: 3em;
+    gap: 3em;
 }
 
 .project-container{
     position: relative;
     width: 30%;
     padding: 0;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 0;
+
 }
 
 .project-container img{
     width: 100%;
+    height: 18em;
     object-fit: cover;
     border-radius: 5px;
 }
@@ -137,7 +139,7 @@ h4, p{
 
 /*TODO change value dynamically*/
 .project-container:hover .project-description {
-    height: 100px;
+    height: 5em;
 }
 
 #projects {
@@ -146,6 +148,10 @@ h4, p{
 }
 
 /* Studies */
+
+#studies{
+    margin-bottom: -3em;
+}
 
 #studies-title {
     text-align: right;
@@ -215,12 +221,15 @@ h4, p{
     height: 0;
     margin-left: 3px;
     margin-right: 3px;
-    /*transition: padding 0.4s;*/
+}
+
+.univ-desc .school-desc-container {
+    position: relative;
+    bottom: 5em;
 }
 
 .univ-desc .school-desc {
-    position: relative;
-    bottom: 2.8em;
+    position: absolute;
     height: 0;
     overflow: hidden;
     margin: 0;
@@ -340,9 +349,15 @@ h4, p{
 
 /* Work Experience */
 
+
 #work-experiences{
-    margin-bottom: 5em;
+    margin-bottom: 10em;
 }
+
+#work-experiences-title{
+    margin-left: 1em;
+}
+
 
 #arrow-container{
     height: 0;
@@ -356,8 +371,7 @@ h4, p{
     top:6em;
     left: 3em;
     display: flex;
-    z-index: -1;/*
-    background-color: blueviolet;*/
+    z-index: -1;
 }
 
 #arrow-line {
@@ -379,15 +393,6 @@ h4, p{
     position: relative;
     left: -2em;
     top: -0.45em;
-    /*width: 2em;*/
-    /*height: 2em;*/
-    /*border: solid black;*/
-    /*border-radius: 5px;*/
-    /*border-width: 0 1em 1em 0;*/
-    /*display: inline-block;*/
-    /*transform: rotate(-45deg);*/
-    /*margin-left: -2.3em;*/
-
 }
 
 #work-cards{
@@ -463,11 +468,12 @@ h4, p{
 /* Footer */
 
 footer {
-    /*position: fixed;*/
-    /*bottom: 0;*/
+    position: fixed;
+    bottom: -5em;
     width: 100%;
     background-color: #353535;
     color: white;
+    transition: bottom 0.8s;
 }
 
 footer img{
@@ -501,3 +507,5 @@ footer p{
 footer ul:hover{
     background-color: gray;
 }
+
+
