--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ h4, p{
     font-family: 'kulim_parkregular';
 }
 
+#navigation li{
+    list-style: none;
+}
+
 .flex-container {
     display: flex;
     flex-direction: column;
@@ -44,7 +48,7 @@ h4, p{
 
 #front-text h1{
     text-align: left;
-    font-size: 100px;
+    font-size: 6em;
     padding-left: 5%;
 
 }
@@ -70,6 +74,7 @@ h4, p{
 }
 
 #front-img {
+    object-position: top;
     width: 50%;
     height: 40em;
     object-fit: cover;
